--- a/style/style.css
+++ b/style/style.css
@@ -105,7 +105,19 @@ ul li{
     text-align: center;
     padding: 8px 0px;
     border-bottom: 1px solid grey;
-
+   }
+   .float-menu-container{
+    position: relative;
+    background-color: rgba(255,255,255,.95);
+        top:54px;
+        right:22px;
+    height: 100vh;
+    width: 100vw;
+   }
+   #navbar-content{
+    position:absolute ;
+    top:0px;
+    
    }
     .body-block-navbar{
         width: 100%;
